--- a/codecov.yml
+++ b/codecov.yml
@@ -1,33 +1,17 @@
-codecov:
-  require_ci_to_pass: false
-
 coverage:
-  precision: 2
-  round: down
-  range: "70...100"
   status:
     project:
       default:
-        target: auto
-        threshold: 5
-        base: auto
-        flags:
-          - unit
-        branches:
-          - main
-        only_pulls: false
+        informational: true
+    
+    patch:
+      default:
+        informational: true
 
-parsers:
-  gcov:
-    branch_detection:
-      conditional: yes
-      loop: yes
-      method: no
-      macro: no
-
-comment:
-  layout: "reach,diff,flags,files,footer"
+comment: #this is a top-level key
+  layout: " diff, flags, files"
   behavior: default
-  require_changes: false # if true: only post the comment if coverage changes
-  require_base: false # [true: must have a base report to post]
-  require_head: true # [true: must have a head report to post]
+  require_changes: false
+  require_base: false
+  require_head: true
+  hide_project_coverage: false
