--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,19 +53,18 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --no-restore
 
       - name: Create Test Results Directory
         run: mkdir -p TestResults
 
       - name: Run Tests
-        run: dotnet test --settings runsettings.xml
+        run: dotnet test --no-restore --no-build --settings runsettings.xml
 
       - name: Upload Test Results
-        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Test Results
+          name: TailwindBlog-Test-Results
           path: TestResults
 
       - name: Codecov
@@ -75,7 +74,7 @@ jobs:
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
-          files: TestResults/test-results.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
@@ -83,7 +82,7 @@ jobs:
         if: always()
         with:
           files: |
-            TestResults/**/*.trx
+            TestResults/**/*.xml
 
       - name: Checkout
         uses: actions/checkout@v4
