--- a/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
+++ b/MyMediator.Tests.Unit/MyMediator.Tests.Unit.csproj
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
-        <RootNamespace>MyMediator</RootNamespace>
-        <TargetFramework>net9.0</TargetFramework>
-        <!--
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<OutputType>Exe</OutputType>
+		<RootNamespace>MyMediator</RootNamespace>
+		<!--
         To enable the Microsoft Testing Platform 'dotnet test' experience, add property:
           <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     
@@ -17,29 +17,31 @@
         For more information on Microsoft Testing Platform support in xUnit.net, please visit:
           https://xunit.net/docs/getting-started/v3/microsoft-testing-platform
         -->
-    </PropertyGroup>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
-    </ItemGroup>
+	<ItemGroup>
+		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <Using Include="Xunit" />
-    </ItemGroup>
+	<ItemGroup>
+		<Using Include="Xunit" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="FluentAssertions" />
-        <PackageReference Include="JetBrains.Annotations" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="NSubstitute" />
-        <PackageReference Include="xunit.v3.core" />
-        <PackageReference Include="xunit.v3" />
-        <PackageReference Include="xunit.runner.visualstudio" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentAssertions" />
+		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="JetBrains.Annotations" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="NSubstitute" />
+		<PackageReference Include="xunit.v3" />
+		<PackageReference Include="xunit.v3.common" />
+		<PackageReference Include="xunit.v3.extensibility.core" />
+		<PackageReference Include="xunit.runner.visualstudio" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\MyMediator\MyMediator.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\MyMediator\MyMediator.csproj" />
+	</ItemGroup>
 
 </Project>
